testsuite/bsc.typechecker/kind/TypeAliasParamGivenTooMany.bs
package TypeAliasParamGivenTooMany () where

type (Foo :: # -> # -> *) a = Bit a

